@@ -1,11 +1,0 @@
-product: ucs
-release: "5.0"
-version: [4]
-scope: ucs_5.0-0-errata5.0-4
-src: univention-portal
-fix: 4.0.14-5
-desc: |
- This update addresses the following issue:
- * The rotation for the listener module log file is now done by `logrotate`
-   and it can be configured via UCR.
-bug: [55610]
